Sat Dec 25 09:50:29 1993  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* valops.c (value_struct_elt): Check for (value)-1 return from
	search_struct_method.

Sat Dec 25 09:50:29 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* defs.h: Move definitions of TARGET_*_BIT after include of tm.h.
	The old way (using #undef in tm.h) was ugly and asking for
	trouble, because it makes it possible for some file to use the
	wrong definition.  Move definition of HOST_CHAR_BIT after definition
	of TARGET_CHAR_BIT.
	* config/alpha/tm-alpha.h, config/h8300/tm-h8300.h,
	config/h8500/tm-h8500.h, config/z8k/tm-z8k.h: Don't undef TARGET_*_BIT
	before defining them.

	* mdebugread.c: Change the builtin_type_* in this file to
	mdebug_type_* and make them static.  Use TYPE_CODE_ERROR for
	complex and float decimal.

	* printcmd.c (disassemble_command): Call wrap_here between printing
	address and printing instruction.

Fri Dec 24 14:23:57 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* stabsread.c (read_type): Don't fall through 'S' case (the case it
	was falling though happened to do the right thing ("break;") but that
	is hardly a good thing to assume).

Tue Dec 21 13:32:02 1993  Per Bothner  (bothner@kalessin.cygnus.com)

	* ch-exp.y (match_dollar_tokens):  Fix off-by-one bug.
	* ch-lang.c (chill_is_varying_struct), ch-lang.h:  New function.
	* ch-lang.c (chill_printstr):  Use double quotes, not single quotes.
	* ch-typeprint.c (chill_type_print_base):  Handle TYPE_CODE_BITSTRING.
	Improve printing of TYPE_CODE_STRING, TYPE_CODE_SET, and
	TYPE_CODE_STRUCT (including checking chill_is_varying_struct).
	Print TYPE_DUMMY_RANGE by printing its TYPE_TARGET_TYPE.
	Handle TYPE_CODE_ENUM.
	* ch-valprint.c (chill_val_print):  Handle TYPE_CODE_BITSTRING.
	For TYPE_CODE_STRING, never print address.  Handle VARYING strings. 
	* gdbtypes.c (force_to_range_type):  New.
	* gdbtypes.c (create_set_type):  Make work, following Chill layout.